5.3.1

2025-10-23  Sam Varshavchik  <mrsam@courier-mta.com>

	* Fix MIME parsing bugs.

5.3.0

2025-05-27  Sam Varshavchik  <mrsam@courier-mta.com>

	* Remove obsolete diagnostic references to FAM and Gamin.

2025-05-04  Sam Varshavchik  <mrsam@courier-mta.com>

	* Require C++17 support. Add autoconf checks for C++17. Provide
	build instructions for oldest versions of enterprise Linux distros
	whose gcc is too old.

2025-04-26  Sam Varshavchik  <mrsam@courier-mta.com>

	* rfc822 library update.

5.2.11

2025-04-06  Sam Varshavchik  <mrsam@courier-mta.com>

	* gcc compatibility fixes

2025-03-20  "Hanno Böck" <hanno@hboeck.de>

	* gcc compatibility fixes

2024-09-21  Sam Varshavchik  <mrsam@courier-mta.com>

	* packaging: Fix rpm packaging, use a synthesized changelog entry
	with the current date, to set the rpmbuild epoch date.

2024-09-07  Sam Varshavchik  <mrsam@courier-mta.com>

	* packaging/debian/rules: Fix deb packaging of systemd service.

5.2.10

2024-08-29  Sam Varshavchik  <mrsam@courier-mta.com>

	* pop3login.c (login_pop3): Fix a problem when proxying UTF8 POP3
	connections.

5.2.9

2024-08-05  Sam Varshavchik  <mrsam@courier-mta.com>

	* courier-debuild: implement DEBGCC=default, to help with pbuilder.

5.2.8

2024-07-25  Sam Varshavchik  <mrsam@courier-mta.com>

	* configure.ac: rpm and deb packaging fixes: remove incorrect MANPATH
	setting, fix warning with newer versions of grep.

5.2.7

2024-06-14  Sam Varshavchik  <mrsam@courier-mta.com>

	* tcpd: support per-local port custom -haproxy configuration.
	Multiple updates to the couriertcpd man page, updated documentation
	for ipv6 and CIDR support.

2024-06-10  Sam Varshavchik  <mrsam@courier-mta.com>

	* tcpd: remove -noidentlookup, implement -haproxy

2024-05-31  Sam Varshavchik  <mrsam@courier-mta.com>

	* couriertcpd: set the IP_FREEBIND option on all listening sockets.

2024-04-06  Sam Varshavchik  <mrsam@courier-mta.com>

	* courier-imap.spec.in: Packaging fixes.
