@@ -1,3 +1,8 @@
+2025-12-28  Sam Varshavchik  <mrsam@courier-mta.com>
+
+	* Update makeimapaccess script to handle automatic configuration
+	file backups created by package managers.
+
 5.3.1
 
 2025-10-23  Sam Varshavchik  <mrsam@courier-mta.com>
